--- a/scss/bootstrap/themes/dark-ali-theme/_icon.scss
+++ b/scss/bootstrap/themes/dark-ali-theme/_icon.scss
@@ -1,24 +1,71 @@
 .has-notif {
-	&:after {
-		content: "";
-		position: absolute;
-		top: -5px;
-		right: -3px;
-		border: solid 3px #fff;
-		background-color: #BCBCCB;
-		@include size(11px, 11px);
-		@include border-radius(50%);
-	}
+    &:after {
+        content: "";
+        position: absolute;
+        top: -5px;
+        right: -3px;
+        border: solid 3px #fff;
+        background-color: #bcbccb;
+        @include size(11px, 11px);
+        @include border-radius(50%);
+    }
 
-	&--active:after {
-		background-color: #4ad991;
-	}
+    &--active:after {
+        background-color: #4ad991;
+    }
 
-	&--danger:after {
-		background-color: $purple;
-	}
+    &--danger:after {
+        background-color: $purple;
+    }
 
-	&--warning:after {
-		background: #FFC06A;
-	}
+    &--warning:after {
+        background: #ffc06a;
+    }
+}
+
+.icon-ic-edit-24px {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 5px;
+    padding-left: 3px;
+    color: #000;
+
+    &.edit--line:after {
+        content: "";
+        position: absolute;
+        width: 17px;
+        height: 3px;
+        background-color: #000;
+        bottom: 0;
+        left: 0;
+    }
+}
+
+.icon-ic-edit {
+    position: relative;
+    text-decoration: none;
+    display: inline-block;
+    padding-bottom: 2px;
+    padding-left: 0px;
+    font-size: 18px;
+    color: #000;
+
+    :hover {
+        color: #000;
+    }
+
+    &:before {
+        content: "\e9d6";
+        @include font-icomoon();
+    }
+
+    &:after {
+        content: "";
+        position: absolute;
+        width: 17px;
+        height: 3px;
+        background-color: #000;
+        bottom: 0;
+        left: 0;
+    }
 }
