--- a/scss/rps/_responsive.scss
+++ b/scss/rps/_responsive.scss
@@ -1,258 +1,259 @@
-@media only screen and (max-width: 1200px) { 
-	.wrapper-content .wrapper-space {
-	    margin-right: 0;
-	}
-	
-	.pending-reviews-page,
-	.product-reviews-page,
-	.dashboard-manage-reviews-page {
-		.input-group--search{
-			max-width: 100% !important;
-			margin-top: 15px;
-		}
+@media only screen and (max-width: 1200px) {
+    .wrapper-content .wrapper-space {
+        margin-right: 0;
+    }
 
-		.wrapper-tbl-action {
-			background-color: #fff;
-			margin-bottom: 15px;
-		    padding: 20px 8px;
-			box-shadow: 2px 2px 3px #d4d4d4;
-		}
-	}
+    .pending-reviews-page,
+    .product-reviews-page,
+    .dashboard-manage-reviews-page {
+        .input-group--search {
+            max-width: 100% !important;
+            margin-top: 15px;
+        }
+
+        .wrapper-tbl-action {
+            background-color: #fff;
+            margin-bottom: 15px;
+            padding: 20px 8px;
+            box-shadow: 2px 2px 3px #d4d4d4;
+        }
+    }
 }
 
-@media only screen and (max-width: 992px) { 
-	.main-header {
-		max-height: 140px !important;
+@media only screen and (max-width: 992px) {
+    .main-header {
+        max-height: 140px !important;
 
-		.logo {
-			width: 100% !important;
-		}
+        .logo {
+            width: 100% !important;
+        }
 
-		nav.navbar {
-			width: 100% !important;
-			margin-left: 0 !important;
-			box-shadow: 0 0 0;
-		    border-bottom: solid 1px #caced5;
-		}
-	}
+        nav.navbar {
+            width: 100% !important;
+            margin-left: 0 !important;
+            box-shadow: 0 0 0;
+            border-bottom: solid 1px #caced5;
+        }
+    }
 
-	aside.main-sidebar {
-		padding-top: 140px !important;
-		left: -260px;
-	}
-	
-	.wrapper-content {
-		padding-left: 0;
-		
-		.wrapper-space {
-			margin-left: 0;
+    aside.main-sidebar {
+        padding-top: 140px !important;
+        left: -260px;
+    }
 
-			&--45 {
-				padding: 25px 45px;
-				margin-left: 8px;
-				margin-right: 8px;
-			}
-		}
-	}
+    .wrapper-content {
+        padding-left: 0;
 
-	.navbar-fixed div.wrapper-content {
-		padding-top: 140px;
-	}
+        .wrapper-space {
+            margin-left: 0;
 
-	.welcome-page .wrapper-box_ {
-		.pad-left-70 {
-			padding-left: 15px !important;
-		}
-		button {
-			width: 100%;
-			margin-top: 15px;
-		}
-	}
+            &--45 {
+                padding: 25px 45px;
+                margin-left: 8px;
+                margin-right: 8px;
+            }
+        }
+    }
+
+    .navbar-fixed div.wrapper-content {
+        padding-top: 140px;
+    }
+
+    .welcome-page .wrapper-box_ {
+        .pad-left-70 {
+            padding-left: 15px !important;
+        }
+        button {
+            width: 100%;
+            margin-top: 15px;
+        }
+    }
 }
 
 @media only screen and (max-width: 768px) {
-	.nav {
-	    margin: initial;
+    .nav {
+        margin: initial;
 
-	    li > a {
-    	    line-height: 50px !important;
-	    }
+        li > a {
+            line-height: 50px !important;
+        }
 
-	    li {
-	    	float: left;
-	    }
-	}
+        li {
+            float: left;
+        }
+    }
 
-	header.main-header .navbar-custom-menu ul.nav {
-		li {
-			position: static;
+    header.main-header .navbar-custom-menu ul.nav {
+        li {
+            position: static;
 
-			ul.dropdown-menu {
-				position: absolute;
-				top: inherit;
-				left: 50%;
-				width: 95%;
-				transform: translate(-50%, 5px);
-				background-color: #fff;
-			    border: solid 1px #c9c9ce;
+            ul.dropdown-menu {
+                position: absolute;
+                top: inherit;
+                left: 50%;
+                width: 95%;
+                transform: translate(-50%, 5px);
+                background-color: #fff;
+                border: solid 1px #c9c9ce;
 
-			    &:before, &:after {
-			    	content: none;
-			    }
-			}
-		}
-	}
+                &:before,
+                &:after {
+                    content: none;
+                }
+            }
+        }
+    }
 
-	.wrapper-content .wrapper-space--45 {
-		padding: 25px 15px;
-	}
+    .wrapper-content .wrapper-space--45 {
+        padding: 25px 15px;
+    }
 
-	.preview-badge-page {
-		.item-widget-at,
-		.item-badge-at {
-		    box-shadow: 1px 1px 3px #989898;
+    .preview-badge-page {
+        .item-widget-at,
+        .item-badge-at {
+            box-shadow: 1px 1px 3px #989898;
 
-		    p {
-		    	padding: 8px;
-		    	padding-bottom: 15px;
-		    }
-		}
-	}
+            p {
+                padding: 8px;
+                padding-bottom: 15px;
+            }
+        }
+    }
 
-	.error-page img {
-		max-width: 100%;
-	}
+    .error-page img {
+        max-width: 100%;
+    }
 
-	header.main-header {
-		.dropdown-header-menu {
-			.dropdown-menu {
-				position: absolute;
-				top: 105%;
-				left: 15px;
-				right: 0;
-				width: 100%;
-				width: calc(100% - 20px);
-				background: #fff;
-				border: solid 1px #ccc;
+    header.main-header {
+        .dropdown-header-menu {
+            .dropdown-menu {
+                position: absolute;
+                top: 105%;
+                left: 15px;
+                right: 0;
+                width: 100%;
+                width: calc(100% - 20px);
+                background: #fff;
 
-				&::after, &::before {
-			    	content: none;
-			    }
+                &::after,
+                &::before {
+                    content: none;
+                }
 
-			    a {
-			    	padding: 15px;
-		    	    padding-right: 45px;
+                a {
+                    padding: 15px;
+                    padding-right: 45px;
 
-		    	    &:after {
-		    	    	right: 15px;
-		    	    }
-			    }
+                    &:after {
+                        right: 15px;
+                    }
+                }
 
-			    .footer a {
-					padding: 10px;
-			    }
-			}
-		}
+                .footer a {
+                    padding: 20px 0;
+                }
+            }
+        }
 
-		.user-menu {
-			ul li {
-				width: 100%;
+        .user-menu {
+            ul li {
+                width: 100%;
 
-				a {
-					line-height: inherit !important;
-					padding: 10px 15px;
-				}
-			}
-		}
-	}
+                a {
+                    line-height: inherit !important;
+                    padding: 10px 15px;
+                }
+            }
+        }
+    }
 
-	.product-reviews-page {
-		.wrapper-tbl-action-2 {
-			.wrap-custom-box {
-				width: 100%;
-				margin-bottom: 15px;
-			}
+    .product-reviews-page {
+        .wrapper-tbl-action-2 {
+            .wrap-custom-box {
+                width: 100%;
+                margin-bottom: 15px;
+            }
 
-			.wrap-custom-box + div {
-				margin-left: 0;
-			}
-		}
-	}
+            .wrap-custom-box + div {
+                margin-left: 0;
+            }
+        }
+    }
 }
 
-@media only screen and (max-width: 544px) { 
+@media only screen and (max-width: 544px) {
+    .product-reviews-page .wrapper-tbl-action-2 button.wid130,
+    .dashboard-manage-reviews-page .wrapper-tbl-action button.wid130 {
+        width: inherit !important;
+    }
 
-	.product-reviews-page .wrapper-tbl-action-2 button.wid130,
-	.dashboard-manage-reviews-page .wrapper-tbl-action button.wid130 {
-	    width: inherit !important;
-	}
+    .ali-modal {
+        &--style-get-review .modal-footer {
+            padding-left: 25px !important;
+            padding-right: 25px !important;
 
-	.ali-modal {
-		&--style-get-review .modal-footer {
-			padding-left: 25px !important;
-			padding-right: 25px !important;
-
-			button {
-				width: 100px !important;
-			}
-		}
-	}
+            button {
+                width: 100px !important;
+            }
+        }
+    }
 }
 
-@media only screen and (min-width: 544px) { 
-	.w-130px {
-		width: 130px !important;
-	}
+@media only screen and (min-width: 544px) {
+    .w-130px {
+        width: 130px !important;
+    }
 }
 
-@media only screen and (min-width: 768px) { 
+@media only screen and (min-width: 768px) {
 }
 
-@media only screen and (min-width: 992px) { 
-	.open-menu--push {
-		aside.main-sidebar {
-			width: 53px;
+@media only screen and (min-width: 992px) {
+    .open-menu--push {
+        aside.main-sidebar {
+            width: 53px;
 
-			a {
-				height: 60px;
-				color: #242639 !important;
-				transition: 0 !important;
+            a {
+                height: 60px;
+                color: #242639 !important;
+                transition: 0 !important;
 
-				&:before {
-					color: #fff !important;
-				}
+                &:before {
+                    color: #fff !important;
+                }
 
-				&:after {
-					color: #242639 !important;
-				}
-			}
+                &:after {
+                    color: #242639 !important;
+                }
+            }
 
-			div.panel-body {
-				padding-left: 0;
-			}
+            div.panel-body {
+                padding-left: 0;
+            }
 
-			li.header, li.divide {
-				display: none;
-			}
-		}
+            li.header,
+            li.divide {
+                display: none;
+            }
+        }
 
-		.wrapper-content {
-		    padding-left: 55px !important;
-		}
-	}
+        .wrapper-content {
+            padding-left: 55px !important;
+        }
+    }
 }
 
-@media only screen and (min-width: 1200px) { 
+@media only screen and (min-width: 1200px) {
 }
 
-@media screen and (min-width:992px) and (max-width: 1200px) {
+@media screen and (min-width: 992px) and (max-width: 1200px) {
 }
 
-@media screen and (min-width: 768px) and (max-width:992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
 }
 
-@media screen and (min-width: 544px) and (max-width:768px) {
+@media screen and (min-width: 544px) and (max-width: 768px) {
 }
 
-@media screen and (min-width: 320px) and (max-width:544px) {
+@media screen and (min-width: 320px) and (max-width: 544px) {
 }
