--- a/scss/bootstrap/themes/dark-ali-theme/_bootstrap-picker.scss
+++ b/scss/bootstrap/themes/dark-ali-theme/_bootstrap-picker.scss
@@ -1,28 +1,34 @@
 .colorpicker-init {
-	.input-group-addon,
-	input[type="text"] {
-		border: solid 1px $border-solid-color;
-		@include border-radius(4px);
+    .input-group-addon,
+    input[type="text"] {
+        border: solid 1px $border-solid-color;
+        transition: $time-transition;
+        font-weight: 600;
+        color: $dark-blue;
 
-		&:focus {
-			border: solid 1px $border-solid-color-action !important;
-		}
-	}
+        &:focus {
+            border: solid 1px $border-solid-color-action !important;
+        }
+    }
 
-	.input-group-addon {
-		background-color: #fff;
+    .input-group-addon {
+        background-color: #fff;
 
-		i {
-			width: 24px !important;
-			height: 24px !important;
-			border: solid 1px #ccc;
-			@include border-radius(50%);
-		}
-	}
+        i {
+            width: 24px !important;
+            height: 24px !important;
+            border: solid 1px #ccc;
+            @include border-radius(50%);
+        }
+    }
 
-	.input-group-addon.rounded {
-		i {
-			@include border-radius(4px);
-		}
-	}
+    .input-group-addon.rounded {
+        i {
+            @include border-radius(4px);
+        }
+    }
+}
+
+.colorpicker-init > span + input[type="text"]:focus {
+    padding-left: 5px !important;
 }
