--- a/scss/bootstrap/themes/dark-ali-theme/_preview-real.scss
+++ b/scss/bootstrap/themes/dark-ali-theme/_preview-real.scss
@@ -1,49 +1,48 @@
 .wrapper-preview-real {
-	padding: 15px;
+    padding: 15px;
 
-	&.bg-dark-blue {
-		.preview-real__header {
-			label { 
-				color: #fff;
-			}
-		}
-	}
+    &.bg-dark-blue {
+        .preview-real__header {
+            label {
+                color: #fff;
+            }
+        }
+    }
 }
 
 .preview-real {
-	&__header {
+    &__header {
+    }
 
-	}
+    &__content {
+        padding: 35px 20px;
+    }
 
-	&__content {
-		padding: 35px 20px;
-	}
+    &__wrapper-media {
+        .media {
+            border-bottom: solid 1px #eee;
+            padding-bottom: 35px;
+            padding-top: 30px;
 
-	&__wrapper-media {
-		.media {
-		    border-bottom: solid 1px #D7DAE2;
-		    padding-bottom: 35px;
-		    padding-top: 30px;
-
-		    &:last-child {
-		    	border-bottom: none;
-		    }
-		}
-	}
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+    }
 }
 
 .modal_preview_real {
-	position: fixed;
+    position: fixed;
     top: 30%;
     right: 15px;
-    opacity: .5;
+    opacity: 0.5;
 
     &:hover {
-    	opacity: 1;
+        opacity: 1;
     }
 }
 
 #preview-real .modal-header {
-	padding-bottom: 0;
-	border-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0;
 }
