--- a/scss/bootstrap/themes/dark-ali-theme/_price-style.scss
+++ b/scss/bootstrap/themes/dark-ali-theme/_price-style.scss
@@ -1,36 +1,35 @@
 .wrapper-price {
-	max-width: 290px;
-	margin-bottom: 40px;
-	border-bottom: solid 3px transparent;
-	border: solid 1px #d2d2d2;
-	border-top: 0;
+    margin-bottom: 40px;
+    border-bottom: solid 3px transparent;
+    border: solid 1px #d2d2d2;
+    border-top: 0;
 
-	> img {
-		max-width: 100%;
-		width: 100%;
-	}
+    > img {
+        max-width: 100%;
+        width: 100%;
+    }
 
-	ul li {
-		margin-bottom: 5px;
-		padding-left: 15px;
-		padding-right: 15px;
-	}
+    ul li {
+        margin-bottom: 5px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
-	&__content {
-		padding-top: 30px;
-		padding-bottom: 40px;
-		border: solid 1px #E9E9F0;
-		background-color: #fff;
-		border-top: 0;
-		box-shadow: 2px 2px 3px #d4d4d4;
-		border-color: #fff;
-	}
+    &__content {
+        padding-top: 30px;
+        padding-bottom: 40px;
+        border: solid 1px #e9e9f0;
+        background-color: #fff;
+        border-top: 0;
+        box-shadow: 2px 2px 3px #d4d4d4;
+        border-color: #fff;
+    }
 
-	&.selected {
-	    border-bottom: solid 3px $purple;
+    &.selected {
+        border-bottom: solid 3px $purple;
 
-	    .wrapper-price__content {
-	    	box-shadow: 2px 0 3px #d4d4d4;
-	    }
-	}
+        .wrapper-price__content {
+            box-shadow: 2px 0 3px #d4d4d4;
+        }
+    }
 }
