--- a/scss/bootstrap/themes/dark-ali-theme/_swtich.scss
+++ b/scss/bootstrap/themes/dark-ali-theme/_swtich.scss
@@ -11,8 +11,7 @@
     height: 20px;
     background-color: white;
     border-radius: 18px;
-    box-shadow: inset 0 -1px white,
-                inset 0 1px 1px rgba(black, .05);
+    box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(black, 0.05);
     cursor: pointer;
     vertical-align: middle;
     margin-bottom: 0;
@@ -23,7 +22,6 @@
         left: 0;
         opacity: 0;
     }
-
 }
 
 .switch-label {
@@ -34,14 +32,15 @@
     text-transform: uppercase;
     background: #eceeef;
     border-radius: inherit;
-    box-shadow: inset 0 1px 2px rgba(black, .12),
-              inset 0 0 2px rgba(black, .15);
+    box-shadow: inset 0 1px 2px rgba(black, 0.12),
+        inset 0 0 2px rgba(black, 0.15);
     @include transition($switchTransition);
 
-    &:before, &:after {
+    &:before,
+    &:after {
         position: absolute;
         top: 50%;
-        margin-top: -.5em;
+        margin-top: -0.5em;
         line-height: 1;
         @include transition(inherit);
     }
@@ -50,24 +49,28 @@
         content: attr(data-off);
         right: 11px;
         color: #aaa;
-        text-shadow: 0 1px rgba(white, .5);
+        text-shadow: 0 1px rgba(white, 0.5);
     }
 
     &:after {
         content: attr(data-on);
         left: 11px;
         color: white;
-        text-shadow: 0 1px rgba(black, .2);
+        text-shadow: 0 1px rgba(black, 0.2);
         opacity: 0;
     }
 
     .switch-input:checked ~ & {
         background: $pink-color;
-        box-shadow: inset 0 1px 2px rgba(black, .15),
-                    inset 0 0 3px rgba(black, .2);
+        box-shadow: inset 0 1px 2px rgba(black, 0.15),
+            inset 0 0 3px rgba(black, 0.2);
 
-        &:before { opacity: 0; }
-        &:after { opacity: 1; }
+        &:before {
+            opacity: 0;
+        }
+        &:after {
+            opacity: 1;
+        }
     }
 }
 
@@ -79,11 +82,11 @@
     height: 8px;
     background: white;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px rgba(black, .2);
+    box-shadow: 1px 1px 5px rgba(black, 0.2);
     @include transition(left #{$switchTransition});
 
     &:before {
-        content: '';
+        content: "";
         position: absolute;
         top: 50%;
         left: 50%;
@@ -92,12 +95,12 @@
         height: 12px;
         background: #f9f9f9;
         border-radius: 6px;
-        box-shadow: inset 0 1px rgba(black, .02);
+        box-shadow: inset 0 1px rgba(black, 0.02);
     }
 
     .switch-input:checked ~ & {
         left: 42px;
-        box-shadow: -1px 1px 5px rgba(black, .2);
+        box-shadow: -1px 1px 5px rgba(black, 0.2);
     }
 
     .switch-input:disabled ~ & {
@@ -105,4 +108,6 @@
     }
 }
 
-.switch-input:disabled ~ .switch-label { cursor: not-allowed; }
+.switch-input:disabled ~ .switch-label {
+    cursor: not-allowed;
+}
