--- a/scss/pages/_create-reviews-page.scss
+++ b/scss/pages/_create-reviews-page.scss
@@ -1,5 +1,7 @@
 .create-reviews-page {
-	._btn-add-page {
-		height: 40px;
-	}
+    ._btn-add-page {
+        height: 40px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
