--- a/scss/pages/_preview-badge-page.scss
+++ b/scss/pages/_preview-badge-page.scss
@@ -1,29 +1,25 @@
 .preview-badge-page {
-	.item-widget-at,
-	.item-badge-at {
-		margin-bottom: 40px;
+    .item-widget-at,
+    .item-badge-at {
+        margin-bottom: 40px;
 
-		img {
-			max-width: 100%;
-		}
+        img {
+            max-width: 100%;
+        }
 
-		.wrap-custom-box {
-			padding-left: 0;
-		}
+        .wrap-custom-box {
+            padding-left: 0;
+        }
 
-		.checkmark-rdb {
-			bottom: -45px;
-			top: inherit;
-			left: 50%;
-			transform: translateX(-50%);
-		}
-	}
+        .checkmark-rdb {
+            bottom: -35px;
+            top: inherit;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
 
-	.item-badge-at {
-		max-width: 190px;
-	}
-
-	.item-widget-at {
-		max-width: 315px;
-	}
+    .wrap-custom-box {
+        width: 100%;
+    }
 }
